[tool.poetry]
name = "nano-llm"
version = "24.5"
description = "Optimized local inference for LLMs with HuggingFace-like APIs for quantization, vision/language models, multimodal agents, speech, vector DB, and RAG."
authors = ["Dustin Franklin <dustinf@nvidia.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
transformers = "^4.41.0"
websockets = "^12.0"
termcolor = "^2.4.0"
tabulate = "^0.9.0"
inflect = "^7.2.1"
flask = "^3.0.3"
tqdm = "^4.66.4"
getch = "^1.0"
decorator-args = "^1.1"
cachetools = "^5.3.3"
natsort = "^8.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
